added post service to fire base and ability to save post

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/PostsCtrl.js"></script>
         <script src="scripts/controllers/AboutCtrl.js"></script>
+        <script src="scripts/services/PostService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
