--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/PostsCtrl.js"></script>
         <script src="scripts/controllers/AboutCtrl.js"></script>
+        <script src="scripts/controllers/PostViewCtrl.js"></script>
         <script src="scripts/services/PostService.js"></script>
         <!-- endbuild -->
 </body>
