--- a/app/index.html
+++ b/app/index.html
@@ -21,16 +21,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Posts</a></li>
-          <li><a ng-href="#/about">About</a></li>
-        </ul>
-        <h3 class="text-muted">angularNews</h3>
-      </div>
-
-      <div ng-view=""></div>
+    <div ng-include="'views/nav.html'"></div>
+    <div class="container" ng-view=""></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
@@ -80,7 +72,9 @@
         <script src="scripts/controllers/PostsCtrl.js"></script>
         <script src="scripts/controllers/AboutCtrl.js"></script>
         <script src="scripts/controllers/PostViewCtrl.js"></script>
+        <script src="scripts/controllers/NavCtrl.js"></script>
         <script src="scripts/services/PostService.js"></script>
+        <script src="scripts/filters/hostNameFilter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
