--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,9 @@
         <script src="scripts/controllers/AboutCtrl.js"></script>
         <script src="scripts/controllers/PostViewCtrl.js"></script>
         <script src="scripts/controllers/NavCtrl.js"></script>
+        <script src="scripts/controllers/AuthCtrl.js"></script>
         <script src="scripts/services/PostService.js"></script>
+        <script src="scripts/services/AuthService.js"></script>
         <script src="scripts/filters/hostNameFilter.js"></script>
         <!-- endbuild -->
 </body>
